# discrete-figures

./: CMakeLists.txt  FigureGenerator.hpp  LICENSE  MartinAlgoOpti.hpp  MartinAlgoSimple.hpp  README.md  main.cpp  meson.build
_obsolete_code_gascom_2022/: CITATION.cff  LICENSE  MartinAlgoOpti.hpp  MartinAlgoSimple.hpp  README.md
_obsolete_code_gascom_2022/app/: Application.cpp  CMakeLists.txt  raygui.h
_obsolete_code_gascom_2022/src/: opti_enumeration.cpp  opti_mt_enumeration.cpp  simple_enumeration.cpp  thread_pool.hpp
app/: Application.hpp  main.cpp
src/: MartinAlgo.hpp  opti_enumeration.cpp  opti_mt_enumeration.cpp  simple_enumeration.cpp  white_rejected.cpp
src/application/: Application.cpp  Application.hpp  raygui.c
src/tests/: test_hash.cpp  test_martinalgo.cpp
